# serializer version: 1
# name: test_nonlinear_optimization_problem
  'The algorithm INTERIOR_POINT is not adapted to the problem because it does not handle non-linear problems.'
# ---
# name: test_nonlinear_optimization_problem.1
  'The algorithm DUAL_SIMPLEX is not adapted to the problem because it does not handle non-linear problems.'
# ---
